--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,4 @@ version: '3.9'
 services:
   cloudflared-tunnel:
     image: cloudflare/cloudflared
-    command: tunnel --url 172.17.0.1:8000
+    command: tunnel --url ${ADDRESS}
