--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,5 @@ version: '3.9'
 services:
   cloudflared-tunnel:
     image: cloudflare/cloudflared
+    restart: unless-stopped
     command: tunnel --url ${ADDRESS}
